fixed overlapping icons

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,7 @@
 .container {
   font-family: arial, sans-serif;
   color: rgb(135, 135, 135);
-  max-width: 700px;
+  max-width: 750px;
   border: 1px solid #dadde1;
   border-radius: 7px;
   margin-top: 30px;
