--- a/src/WeatherForecastDay.css
+++ b/src/WeatherForecastDay.css
@@ -1,4 +1,8 @@
+.WeatherForecast-day {
+  margin-bottom: 8px;
+}
+
 .forecastIcon {
-  width: 50px;
+  width: 63px;
   height: 50px;
 }
